# QB64Fresh

./: .editorconfig  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  PROJECT_PLAN.md  README.md  TODO.md  rustfmt.toml
.claude/commands/: codebase-review.md  docs.md  explain.md  refactor.md  review.md  test.md
.github/workflows/: ci.yml
AgenticLogs/: 2026-01-16_session-001_project-setup.md  2026-01-16_session-002_parser-implementation.md  2026-01-16_session-003_semantic-analysis.md  2026-01-16_session-004_code-generation.md  2026-01-16_session-005_runtime-library.md  2026-01-16_session-006_lsp-server.md  2026-01-16_session-007_vscode-extension.md  2026-01-17_session-008_codebase-fixes.md  2026-01-18_session-009_module-refactoring.md  2026-01-18_session-010_phase1-language-features.md
AgenticLogs/IndividualProblems/: 2026-01-16_problem-parser-token-api-mismatch.md  _TEMPLATE.md
docs/: PARSER_PLAN.md  QB64PE_ARCHITECTURE_ANALYSIS.md  QB64_LANGUAGE_SPECIFICATION.md  QB64_SYNTAX_REFERENCE.md
docs/ThingsToDo/: 2026-01-16_codebase-review.md  2026-01-17_code-review.md  2026-01-17_codebase-review.md  TODO.md
docs/adrs/: ADR-0001-implementation-language.md  ADR-0002-code-generation-backend.md  ADR-0003-runtime-library-approach.md  ADR-0004-build-system-tooling.md  ADR-0005-testing-framework.md  README.md
examples/: array_test.bas  array_test2.bas  data_test.bas  data_test2.bas  data_test3.bas  data_test4.bas  hello.bas  simple.bas  simple.c
runtime/: Cargo.toml
runtime/include/: qb64fresh_rt.h
runtime/src/: io.rs  lib.rs  math.rs  string.rs
src/: lib.rs  main.rs
src/ast/: expr.rs  mod.rs  stmt.rs
src/codegen/: c_backend.rs  error.rs  mod.rs
src/codegen/c_backend/: analysis.rs  expr.rs  mod.rs  runtime.rs  stmt.rs  types.rs
src/lexer/: mod.rs  token.rs
src/lsp/: main.rs  mod.rs
src/parser/: control_flow.rs  directives.rs  error.rs  expressions.rs  mod.rs  procedures.rs  statements.rs  tokens.rs
src/semantic/: checker.rs  error.rs  mod.rs  symbols.rs  typed_ir.rs  types.rs
src/semantic/checker/: assignments.rs  const_eval.rs  control_flow.rs  definitions.rs  expressions.rs  mod.rs  statements.rs
